--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
-baseURL = 'http://example.org/'
+baseURL = ''
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Fertility Medicine Dosing'
+builddrafts = true 
+params.assets.disableFingerprinting = true
