added contact form

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,8 @@ baseURL = ''
 languageCode = 'en-us'
 title = 'Fertility Medicine Dosing'
 builddrafts = true 
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
